# zksui

./: Makefile.toml  README.md
_prover/: Cargo.toml
_prover/src/: main copy 2.rs  main copy 3.rs  main copy 4.rs
circuit/: .gitignore  main.circom
contract/: Move.toml
contract/sources/: main.move  verifier.move
prover/: input.json
prover-snarkjs/: .gitignore
prover_rs/: output_data.json
prover_rs/src/: main copy 2.rs  main copy.rs
scripts/: bun.lockb  package.json
scripts/src/: do_just.ts  parse_vk.ts  verify.ts
trusted_setup/: circuit_0000.zkey  circuit_0001.zkey  pot12_0001.ptau  verification_key.json
utils/: Cargo.toml  output_data.json
utils/src/: main.rs
