[package]
edition = "2021"
name = "prover"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "setup"
path = "src/bin/untrusted_setup.rs"

[dependencies]
ark-bn254 = "0.4.0"
ark-circom = {git = "https://github.com/gakonst/ark-circom.git"}
ark-ff = "0.4.1"
ark-groth16 = "0.4.0"
ark-marlin = "0.3.0"
ark-mnt6-298 = "0.4.0"
ark-poly = "0.4.1"
ark-poly-commit = "0.3"
ark-relations = "0.4.0"
ark-serialize = "0.4.1  "
ark-snark = "0.4.0"
ark-std = "0.4.0"
blake2 = "0.9"
rand = "0.8.5"
rand_chacha = "0.3.1"
